# cloudfinops-env

./: Dockerfile  LICENSE  README.md  app.py  demo_rl.py  engine.py  graders.py  inference.py  logger.py  mock_agent.py  openenv.yaml  pyproject.toml  requirements.txt  snapshot_loader.py  tasks.py  validate-submission.ps1  validate-submission.sh  validate_api.py  validate_data.py
data/snapshots/: sample_infra.json
data/trajectories/: ep_task-2_20260408_231436_41c2a9.jsonl  ep_task-3_20260408_231404_b7123f.jsonl
server/: __init__.py  app.py  engine.py  graders.py  models.py  snapshot_loader.py  tasks.py
server/data/snapshots/: enterprise_audit.json
server/data/trajectories/: ep_task-1_20260408_231357_cc3beb.jsonl  ep_task-1_20260408_231421_2fc9ab.jsonl  ep_task-2_20260408_231212_529247.jsonl  ep_task-2_20260408_231401_6e4443.jsonl
